fixed off center console-container on small mobile width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ body {
   left:10px;
 }
 
-@media (max-width: 400px) {
+/* @media (max-width: 400px) {
   div .console-container {
     text-align:center;
   }
@@ -208,7 +208,7 @@ body {
     top:-0.14em;
     left:10px;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Navigation Menu
